@@ -4,6 +4,7 @@
 - Improved: You can open purchase or consume page from stock for one product now
 - Fixed: Swipe buttons in stock overview didn't work for last two items
 - Fixed: Menu items on bottom were not clickable sometimes (#383)
+- Fixed: Parent product field is locked if product is already parent product (#349)
 
 2.0.0-alpha06
 - New: Stock overview page now has list animations and offline loading
